--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
 }
 
 .menu {
-    height: 1400px;
+    height: 1425px;
     background-image: url('/blog/imagens/raios.jpg');
     background-size: 1900px;
 }
@@ -94,9 +94,74 @@
 }
 
 .subItem:hover {
-    background-color: powderblue;
+    background-color: rgb(59, 119, 79);
 }
 
 .menu a:hover {
-    background-color: powderblue;
+    background-color: rgb(59, 119, 79);
+}
+
+.carrossel {
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+#slider {
+    width: 700px;
+    height: 300px;
+    overflow: hidden;
+}
+
+.slide {
+    width: 700px;
+    height: 300px;
+    float: left;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+}
+
+.noticias1 {
+    margin-left: 30px;
+    margin-top: 20px;
+    width: 1700px;
+    height: 200px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #f5fffa;
+}
+
+.noticias2 {
+    margin-left: 30px;
+    margin-top: 50px;
+    width: 1700px;
+    height: 200px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #f5fffa;
+
+}
+
+.noticias3 {
+    margin-left: 30px;
+    margin-top: 30px;
+    width: 1700px;
+    height: 200px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #f5fffa;
+}
+
+footer li {
+    margin-top: 15px;
+    text-decoration: none;
+    margin-left: 300px;
+    display: block;
+    text-align: center;
+    color: aliceblue;
+    width: 1040px;
+
 }
